--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link type="text/css" rel="stylesheet" href="bootstrap.min.css" th:href="@{bootstrap.min.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>user from t1907m</title>
 </head>
 <body>
+<div class="col-3">
+    <div class="container col-6">
+        <h1>User CRUD actions</h1>
+        <table class="table table-active">
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>CRUD</th>
+            </tr>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.name}"></td></br>
+                <td th:text="${user.email}"></td></br>
+                <td th:text="${user.phone}"></td></br>
+                <td>
+                    <a th:href="@{/edit?id={id} (id=${user.id})" class="btn btn-primary">Edit</a>
+                    <a th:href="@{/delete?id={id} (id=${user.id})" class="btn btn-primary">Delete</a>
+                </td>
+            </tr>
+        </table>
+        <a href="/add" class="btn btn-success">Create new user</a>
+    </div>
+</div>
 
 </body>
 </html>
